# agent_template

./: .gitignore  CHANGELOG.md  ChangeLog  DEVELOPMENT.md  README.md  config.yaml  create_environment.bash  example.py  example_config.yaml  requirements.txt  run.bash  run.bat  run_in_environment.bash
ABM code/: ABM4CSL v3_ANH.nlogo  ABM4CSL v3_fixed_seed.nlogo
ABM_code/: ABM4CSL v3_ANH.nlogo
agent_template/: __init__.py  __main__.py  farmer.py  gis.py  landusemodel.py  networks.py  run.py  utils.py  visualisation.py
dev/environment/: Dockerfile  build_conda_environment.bash  build_docker_container.bash  python_requirements.txt  run_in_conda_environment.bash  run_in_docker_container.bash
dev/julia/: Manifest.toml
dev/jupyterlab/: test.py
dev/python/: pyproject.toml  requirements.txt
dev/python/agent_template/: farmer.py
dev/python/test/: test_config.yaml
dev/python/test/gis_data/: test_land_use.grd
environment/: Dockerfile  build_conda_environment.bash  build_python_environment.bash  conda_env.yaml  create_conda_environment.bash  create_python_environment.bash  env.yaml  python_requirements.txt  requirements.txt  run_in_conda_environment.bash  run_in_python_environment.bash  run_in_solara.sh
julia/: Project.toml  land_use_test.jl
netlogo/: ABM4CSL.nlogo  anh_land_use_test.nlogo  extensions.nls  go.nls  land_use_data.csv  rules.nls  setup.nls  utilities.nls  variables.nls
python/: CHANGELOG.md
test/: example.py  example_config.yaml  run_test.bash  test.py  test_config.yaml  test_environment.bash  test_plot.bash
tests/: example.py
(+39 files in other folders)
